# jamkit

./: CMakeLists.txt  package.xml
config/: handmotors.yaml
extra_scripts/: readme.txt
extra_scripts/AX-12/: ax12_close.py  ax12_disable_torque.py  ax12_enable_torque.py  ax12_getpos.py  ax12_move.py  ax12_open.py  dxl_test.py  motorsliders.py
extra_scripts/Arduino/Arduino_Sensors/: Arduino_Sensors.ino
extra_scripts/Libraries and info/Velleman_KA12/: Velleman_KA12.cpp  Velleman_KA12.h
extra_scripts/Libraries and info/Velleman_KA12/Velleman_KA12/: Velleman_KA12.ino
launch/: jamkit_motor_connect.launch  jamkit_motor_init_reduced.launch  jamkit_sensing.launch
msg/: fingertip_adjusted.msg  jamkit_joint_position.msg  sensor_raw.msg
src/: hf_process.py  interaction_generator.py  rot_process.py  sensor_process.py  sensor_split.py
