<?xml version="1.0"?>
<package format="2">
  <name>jamkit</name>
  <version>0.0.1</version>
  <description>The jamkit package for the biomimetic robot hand developed as part of the MEng final year research project</description>

  <maintainer email="ex16192@qmul.ac.uk">Sam</maintainer>
  <license>BSD</license>
  <url type="website">http://sdeiri.com</url>
  <author email="ex16192@qmul.ac.uk">Sam</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>

  </export>
</package>
